--- a/navtitle.css
+++ b/navtitle.css
@@ -1,54 +1,83 @@
-*{
-	padding: 0;
-	margin: 0;
-}
-ul{
-	list-style-type:none ;
-	margin: 0;
-	padding: 0;
-}
-li{
-	float: left;
-}
-a{
-	display: block;
-	font-size: 16PX;
-	color: white;
-	text-decoration: none;
-	width: 130px;
-	text-align: center;
-}
-.menu{
-	background-color: #000000;
-	width: 100%;
-	height: 80px;
-	line-height: 80px;
-	margin: 0 auto;
-}
-.menu-nav{
-	margin-left: 10%;
-}
-.menu-list{
-	width: 100px;
-	background-color: ;
-}
-.menu-list li a{
-	background-color: rgb(14,94,176);
-}
-.menu-list{
-	display: none;
-}
-
-/*.menu-nav li a :hover{
-	display: block;
-}*/
-
-.triangle_border_down{
+body {
+			margin: 0px;
+			padding: 0px;
+		}
+		
+		li {
+			list-style: none;
+			width: 80px;
+			height: 20px;
+		}
+		a {
+			display: block;
+		}
+		a:link,
+		a:visited {
+			text-decoration: none;
+			color: #000000;
+		}
+		
+		.menu {
+			margin: 0px auto;
+			width: 100%;
+			height: 80px;
+			background-color: #000000;
+		}
+		.menu ul {
+			margin: 0px;
+			padding: 0px;
+			margin-left: 10%;
+		}
+		.menu ul li {
+			position: relative;
+			top: 30px;
+			float: left;
+			list-style: none;
+			border: 1px #999999;
+			text-align: center;
+			margin-left: 40px;
+		}
+		.menu ul li ul {
+			display: none;
+			position: relative;
+			
+		}
+		.menu ul li ul li{
+			position: relative;
+			left: -30px;
+			top: 0px;
+			border-bottom: 1px solid #999999;
+			background: rgb(17,94,176);
+		}
+		.menu ul li a{
+			color: white;
+			font-size: 16px;
+		}
+		.menu ul li:hover ul {
+			display: block;
+			position: absolute;
+		}
+.triangle_border_down {
     width:0;
     height:0;
     border-width:6px 6px 0;
     border-style:solid;
-    border-color:#FFFFFF transparent transparent;/*灰 透明 透明 */
-    margin:0px 10px;
-    position:relative;
+    border-color:red transparent transparent;
+    margin-top: 100px;
+}
+
+.content{
+	/*background: url(../img/8.jpg) no-repeat;*/
+	width: 100%;
+	height: 600px;
+	background: pink;
+}
+p{
+	font-size: 30px;
+	font-weight: bold;
+	color: white;
+	margin: 0 auto;
+}
+.ardess li{
+	display: inline;
 }
