--- a/navtitle.css
+++ b/navtitle.css
@@ -1,83 +1,53 @@
-body {
-			margin: 0px;
-			padding: 0px;
-		}
-		
-		li {
-			list-style: none;
-			width: 80px;
-			height: 20px;
-		}
-		a {
-			display: block;
-		}
-		a:link,
-		a:visited {
-			text-decoration: none;
-			color: #000000;
-		}
-		
-		.menu {
-			margin: 0px auto;
-			width: 100%;
-			height: 80px;
-			background-color: #000000;
-		}
-		.menu ul {
-			margin: 0px;
-			padding: 0px;
-			margin-left: 10%;
-		}
-		.menu ul li {
-			position: relative;
-			top: 30px;
-			float: left;
-			list-style: none;
-			border: 1px #999999;
-			text-align: center;
-			margin-left: 40px;
-		}
-		.menu ul li ul {
-			display: none;
-			position: relative;
-			
-		}
-		.menu ul li ul li{
-			position: relative;
-			left: -30px;
-			top: 0px;
-			border-bottom: 1px solid #999999;
-			background: rgb(17,94,176);
-		}
-		.menu ul li a{
-			color: white;
-			font-size: 16px;
-		}
-		.menu ul li:hover ul {
-			display: block;
-			position: absolute;
-		}
-.triangle_border_down {
-    width:0;
-    height:0;
-    border-width:6px 6px 0;
-    border-style:solid;
-    border-color:red transparent transparent;
-    margin-top: 100px;
+@charset "UTF-8";
+ul{
+	list-style: none;
+}
+a{
+	text-decoration: none;
+}
+/*导航栏样式 start*/
+.nav{
+    height: 80px;
+    line-height:80px;
+    background: #333333;
+    font-size: 18px;
+    
 }
 
-.content{
-	/*background: url(../img/8.jpg) no-repeat;*/
-	width: 100%;
-	height: 600px;
-	background: pink;
+.nav li {
+    float: left;
+    position: relative;
+    width: 100px;
+    height: 80px;
+    line-height:80px;
+    text-align: center;
+    transition: .3s;
+    margin-left: 2%;
 }
-p{
-	font-size: 30px;
-	font-weight: bold;
-	color: white;
-	margin: 0 auto;
+
+.nav li:hover{
+    background: #0099ff;
 }
-.ardess li{
-	display: inline;
+.nav li a {
+    color:#fff;
+    display: block;
 }
+
+.nav li .child-nav li{
+    float: left;
+    background: rgb(17,94,176);
+    height: 30px;
+    line-height:30px;
+    border-bottom: 1px solid #a3cadd;
+}
+
+.nav .nav-item ul{
+    display: none;
+    position: absolute;
+    top:80px;
+}
+
+/*下拉菜单样式 start*/
+/*.nav .nav-item:hover ul{
+    display: block;
+}*/
